Alps: Fix italics font issue on iOS

--- a/projects/alps/css/style.css
+++ b/projects/alps/css/style.css
@@ -290,6 +290,7 @@ h3 {
 
 .region-title p {
     font-family: "Cormorant Italic", serif;
+    font-style: italic;
     text-align: center;
     font-size: 1.6rem;
     color: var(--grey);
